@@ -1,10 +1,10 @@
 Package: netmeta
 Title: Network Meta-Analysis using Frequentist Methods
 Version: 6.6-6
-Date: 2019-01-08
+Date: 2019-01-10
 Depends: meta (>= 4.9-3)
+Imports: magic, MASS, ggplot2 (>= 3.0.0)
 Suggests: colorspace, rgl, hasseDiagram (>= 0.1.3), grid
-Imports: magic, MASS
 Authors@R: c(person("Gerta", "Rücker",
                     role = "aut",
                     comment = c(ORCID = "0000-0002-2192-2560")),
