@@ -7,6 +7,7 @@ S3method(forest,netmeta)
 S3method(forest,netsplit)
 S3method(funnel,netmeta)
 S3method(plot,netposet)
+S3method(plot,netrank)
 S3method(print,decomp.design)
 S3method(print,netbind)
 S3method(print,netcomb)
@@ -45,6 +46,7 @@ export(netrank)
 export(netsplit)
 export(pairwise)
 export(plot.netposet)
+export(plot.netrank)
 export(print.decomp.design)
 export(print.netbind)
 export(print.netcomb)
@@ -59,6 +61,17 @@ export(print.summary.netmeta)
 export(summary.netcomb)
 export(treats)
 importFrom(MASS,ginv)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_fill_gradient2)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_classic)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(grDevices,col2rgb)
 importFrom(grDevices,heat.colors)
 importFrom(grDevices,rgb)
